Fix Maven integration tests on JDK 24